client/styles/base.less
html,
body {
  height: 100%;
  /* The html and body elements cannot have any padding or margin. */
}

body {
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
}

a {
  color: #00B7FF;
}

/* 
  Allow angular.js to be loaded in body, hiding cloaked elements until 
  templates compile.  The !important is important given that there may be 
  other selectors that are more specific or come later and might alter display.  
 */
[ng\:cloak], [ng-cloak], .ng-cloak {
    display: none !important;
}

/*
 * Primary Layout
 * -------------- */

#main {
    margin: 0 auto 60px;
    background-color: white;
    padding: 120px 40px 0px;
    height: 100%;
    position: relative;
}

/* Wrapper for page content to push down footer */
#wrap {
    min-height: 100%;
    height: auto !important;
    height: 100%;
    /* Negative indent footer by it's height */
    margin: -60px auto -60px;
}

/* Set the fixed height of the footer here */
#push,
#footer {
    height: 60px;
}
#footer {
    background-color: #000;
}

/* Lastly, apply responsive CSS fixes as necessary */
@media (max-width: 767px) {
    #footer {
      margin-left: -20px;
      margin-right: -20px;
      padding-left: 20px;
      padding-right: 20px;
    }
}


/*
 * Navigation
 * ---------- */

.navbar .nav-center {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    width: 100%;
    text-align: center;
    margin: 0 auto;
    line-height: 50px;
    display: inline-block;
    max-width: 600px;
    white-space: nowrap;
    overflow: visible;
}

.navbar .nav-center h1,
.navbar .nav-center h2,
.navbar .nav-center h3,
.navbar .nav-center h4,
.navbar .nav-center h5,
.navbar .nav-center h6 {
    margin: 0;
    line-height: 50px;
}

.navbar-inverse .navbar-text {
    color: #eee;
}

.navbar-nav li { z-index: 5; }

/*
 * Buttons
 * ------- */

.btn .glyphicon, .glyphicon.glyphicon-menu, a .glyphicon { margin: 0 4px; }
 
.btn.btn-icon .glyphicon { margin-right: 0; }


/**
 * Simple CSS Spinner
 * http://www.designcouch.com/home/why/2013/05/23/dead-simple-pure-css-loading-spinner/
 */

.spinner {
    display: inline-block;
    height: 24px;
    width: 24px;
    vertical-align: middle;
    margin: 0px auto;
    position: relative;
    -webkit-animation: rotation .8s infinite linear;
    -moz-animation: rotation .8s infinite linear;
    -o-animation: rotation .8s infinite linear;
    animation: rotation .8s infinite linear;
    border-left: 4px solid rgba(120, 120, 120, 0.15);
    border-right: 4px solid rgba(120, 120, 120, 0.15);
    border-bottom: 4px solid rgba(120, 120, 120, 0.15);
    border-top: 4px solid rgba(110, 110, 110, 0.8);
    border-radius: 100%;
}

@-webkit-keyframes rotation {
    from {-webkit-transform: rotate(0deg);}
    to {-webkit-transform: rotate(359deg);}
}

@-moz-keyframes rotation {
    from {-moz-transform: rotate(0deg);}
    to {-moz-transform: rotate(359deg);}
}

@-o-keyframes rotation {
    from {-o-transform: rotate(0deg);}
    to {-o-transform: rotate(359deg);}
}

@keyframes rotation {
    from {transform: rotate(0deg);}
    to {transform: rotate(359deg);}
}


/*
 * Sortable Lists
 * -------------- */

.sortable-list-container, .shadow-list { list-style: none outside none; }

.sortable-list-container li {
    float: left;
    position: relative;
    z-index: 5;
}

.shadow-list li {
    position: absolute;
    z-index: 1;
}


/*
 * Miscellaneous
 * ------------- */

/* Trunate long text with ellipses */
.ellipsis {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;  // IE 6+, FF 7+, Op 11+, Saf 1.3+, Chr 1+
    -o-text-overflow: ellipsis;  // for Opera 9 & 10
}

/* Confirmation popover */
.confirm-popover { width: 20em; }

